tests/ecc-aws-385-route_table_without_tag_information/placebo-green/ec2.DescribeRouteTables_1.json
{
    "status_code": 200,
    "data": {
        "RouteTables": [
            {
                "Associations": [],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-0587cbcc44f0c0591",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/16",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    }
                ],
                "Tags": [
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Green"
                    },
                    {
                        "Key": "CustodianRule",
                        "Value": "ecc-aws-385-route_table_without_tag_information"
                    }
                ],
                "VpcId": "vpc-12345asdfg",
                "OwnerId": "111111111111"
            }
        ],
        "ResponseMetadata": {}
    }
}
